--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -149,6 +149,8 @@
           items:
             - name: 只读副本
               href: concepts-read-replicas.md
+            - name: 逻辑解码
+              href: concepts-logical.md
     - name: 超大规模 (Citus)
       items:
         - name: Nodes
@@ -177,7 +179,7 @@
           items:
             - name: 配置选项
               href: concepts-hyperscale-configuration-options.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 单个服务器
       items:
@@ -243,7 +245,7 @@
           items:
             - name: 针对指标创建警报
               href: howto-alert-on-metric.md
-        - name: 故障排除
+        - name: 疑难解答
           items:
             - name: 排查连接错误
               href: howto-troubleshoot-common-connection-issues.md
@@ -269,6 +271,8 @@
           items:
             - name: Azure 门户
               href: howto-data-encryption-portal.md
+            - name: Azure CLI
+              href: howto-data-encryption-cli.md
         - name: 重新启动服务器
           items:
             - name: Azure 门户
@@ -301,7 +305,7 @@
           items:
             - name: 针对指标创建警报
               href: howto-hyperscale-alert-on-metric.md
-        - name: 故障排除
+        - name: 疑难解答
           items:
             - name: 排查连接错误
               href: howto-hyperscale-troubleshoot-common-connection-issues.md
