--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -88,7 +88,7 @@
       items:
         - name: 复原能力和灾难恢复
           href: concept-disaster-recovery.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 为一部分用户启用某一功能
       href: howto-feature-filters-aspnet-core.md
@@ -120,7 +120,7 @@
           href: 'https://go.microsoft.com/fwlink/?linkid=2103727'
         - name: 用于 JavaScript 的 Azure SDK
           href: 'https://go.microsoft.com/fwlink/?linkid=2103664'
-        - name: REST
+        - name: REST API
           href: 'https://go.microsoft.com/fwlink/?linkid=2078296'
     - name: 特色管理
       items:
@@ -128,6 +128,10 @@
           href: 'https://go.microsoft.com/fwlink/?linkid=2091700'
         - name: .NET Core 筛选器库
           href: 'https://go.microsoft.com/fwlink/?linkid=2091601'
+    - name: 配置存储管理
+      items:
+        - name: REST API
+          href: 'https://docs.microsoft.com/rest/api/appconfiguration/'
 - name: 资源
   items:
     - name: 定价
