--- a/articles/azure-resource-manager/templates/toc.yml
+++ b/articles/azure-resource-manager/templates/toc.yml
@@ -10,9 +10,49 @@
       href: quickstart-create-templates-use-the-portal.md
     - name: 创建模板 - VS Code
       href: quickstart-create-templates-use-visual-studio-code.md
+    - name: Azure 服务
+      items:
+        - name: AKS
+          href: ../../aks/kubernetes-walkthrough-rm-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 应用程序网关
+          href: ../../application-gateway/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 备份
+          href: ../../backup/quick-backup-vm-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: Cosmos DB
+          href: ../../cosmos-db/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 事件网格
+          href: ../../event-grid/blob-event-quickstart-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 事件中心
+          href: ../../event-hubs/event-hubs-resource-manager-namespace-event-hub.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - Spark
+          href: ../../hdinsight/spark/apache-spark-jupyter-spark-sql.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - Hadoop
+          href: ../../hdinsight/hadoop/apache-hadoop-linux-tutorial-get-started.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - Kafka
+          href: ../../hdinsight/kafka/apache-kafka-quickstart-resource-manager-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - HBase
+          href: ../../hdinsight/hbase/quickstart-resource-manager-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - Interactive Query
+          href: ../../hdinsight/interactive-query/quickstart-resource-manager-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: HDInsight - ML Services
+          href: ../../hdinsight/r-server/quickstart-resource-manager-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: Key Vault
+          href: ../../key-vault/quick-create-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 负载均衡器
+          href: ../../load-balancer/quickstart-load-balancer-standard-public-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 策略
+          href: ../../governance/policy/assign-policy-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 服务总线消息传送
+          href: ../../service-bus-messaging/service-bus-resource-manager-namespace-queue.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: SQL 数据库
+          href: ../../sql-database/sql-database-single-database-get-started-template.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 虚拟机规模集 - Linux
+          href: ../../virtual-machine-scale-sets/quick-create-template-linux.md?toc=/azure/azure-resource-manager/templates/toc.json
+        - name: 虚拟机规模集 - Windows
+          href: ../../virtual-machine-scale-sets/quick-create-template-windows.md?toc=/azure/azure-resource-manager/templates/toc.json
 - name: 教程
   items:
-    - name: 初学者
+    - name: 初学者模板
       items:
         - name: 1 - 创建第一个模板
           href: template-tutorial-create-first-template.md
@@ -34,10 +74,19 @@
           href: template-tutorial-add-tags.md
         - name: 10 - 使用参数文件
           href: template-tutorial-use-parameter-file.md
+    - name: 部署
+      items:
+        - name: 1 - 部署本地模板
+          href: deployment-tutorial-local-template.md
+        - name: 2 - 部署链接模板
+          href: deployment-tutorial-linked-template.md
+        - name: 3 - 创建管道
+          displayName: Devop
+          href: deployment-tutorial-pipeline.md
     - name: 高级
       items:
         - name: 利用模板参考
-          href: template-tutorial-create-encrypted-storage-accounts.md
+          href: template-tutorial-use-template-reference.md
         - name: 创建多个实例
           displayName: 'iteration,copy'
           href: template-tutorial-create-multiple-instances.md
@@ -61,9 +110,6 @@
           href: template-tutorial-deploy-sql-extensions-bacpac.md
         - name: 保护项目
           href: template-tutorial-secure-artifacts.md
-        - name: 使用 Azure Pipelines 进行持续集成
-          displayName: DevOps
-          href: template-tutorial-use-azure-pipelines.md
         - name: 使用安全部署实践
           displayName: adm
           href: deployment-manager-tutorial.md
@@ -214,7 +260,7 @@
         - name: InvalidTemplate
           href: error-invalid-template.md
         - name: Linux 部署问题
-          href: ../../virtual-machines/linux/troubleshoot-deploy-vm.md
+          href: ../../virtual-machines/troubleshooting/troubleshoot-deploy-vm-linux.md
         - name: NoRegisteredProviderFound
           href: error-register-resource-provider.md
         - name: NotFound
@@ -222,9 +268,9 @@
         - name: ParentResourceNotFound
           href: error-parent-resource.md
         - name: Linux 预配和分配问题
-          href: ../../virtual-machines/linux/troubleshoot-deployment-new-vm.md
+          href: ../../virtual-machines/troubleshooting/troubleshoot-deployment-new-vm-linux.md
         - name: Windows 预配和分配问题
-          href: ../../virtual-machines/windows/troubleshoot-deployment-new-vm.md
+          href: ../../virtual-machines/troubleshooting/troubleshoot-deployment-new-vm-windows.md
         - name: RequestDisallowedByPolicy
           href: error-policy-requestdisallowedbypolicy.md
         - name: ReservedResourceName
@@ -234,7 +280,7 @@
         - name: SkuNotAvailable
           href: error-sku-not-available.md
         - name: Windows 部署问题
-          href: ../../virtual-machines/windows/troubleshoot-deploy-vm.md
+          href: ../../virtual-machines/troubleshooting/troubleshoot-deploy-vm-windows.md
 - name: 参考
   items:
     - name: 模板参考
