--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -39,6 +39,8 @@
               href: sql-api-java-get-started.md
             - name: 异步 Java
               href: sql-api-async-java-get-started.md
+            - name: 异步 Java 端到端示例应用
+              href: create-sql-api-java-changefeed.md
             - name: Node.js
               href: sql-api-nodejs-get-started.md
         - name: 构建 Web 应用
@@ -87,7 +89,7 @@
   items:
     - name: NoSQL 数据库与关系数据库
       href: relational-nosql.md
-    - name: 全局分布
+    - name: 全球分布
       items:
         - name: 全局分布概述
           displayName: 'replication, replicate, geo distribution'
@@ -264,7 +266,7 @@
                     - name: FLOOR
                       displayName: 'FLOOR, built-in functions'
                       href: sql-query-floor.md
-                    - name: 日志
+                    - name: LOG
                       displayName: 'LOG, logarithm, built-in functions'
                       href: sql-query-log.md
                     - name: LOG10
@@ -595,7 +597,7 @@
           items:
             - name: 弹性缩放
               href: manage-scale-cassandra.md
-        - name: 操作方法指南
+        - name: 操作指南
           items:
             - name: 更改源
               href: cassandra-change-feed.md
@@ -603,7 +605,7 @@
               href: 'https://docs.microsoft.com/azure/java/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db?context=/azure/cosmos-db/context/context'
             - name: Cassandra 和 Spark
               items:
-                - name: 介绍
+                - name: 简介
                   href: cassandra-spark-generic.md
                 - name: 使用 Databricks 进行连接
                   href: cassandra-spark-databricks.md
@@ -636,10 +638,6 @@
           items:
             - name: 什么是 Cosmos DB 中的 MongoDB API？
               href: mongodb-introduction.md
-            - name: 线路协议支持 (3.2)
-              href: mongodb-feature-support.md
-            - name: 线路协议支持 (3.6)
-              href: mongodb-feature-support-36.md
         - name: 快速入门
           items:
             - name: .NET
@@ -683,7 +681,13 @@
               href: tutorial-query-mongodb.md
             - name: 4 - 全球分配数据
               href: tutorial-global-distribution-mongodb.md
-        - name: 操作方法指南
+        - name: 概念
+          items:
+            - name: 线路协议支持 (3.6)
+              href: mongodb-feature-support-36.md
+            - name: 线路协议支持 (3.2)
+              href: mongodb-feature-support.md
+        - name: 操作指南
           items:
             - name: 迁移前指南
               href: mongodb-pre-migration.md
@@ -727,7 +731,7 @@
       items:
         - name: 概述
           items:
-            - name: 什么是 Cosmos DB 中的 Germlin API？
+            - name: 什么是 Cosmos DB 中的 Gremlin API？
               href: graph-introduction.md
             - name: 线路协议支持
               href: gremlin-support.md
@@ -757,7 +761,7 @@
               href: gremlin-limits.md
             - name: 兼容性
               href: gremlin-compatibility.md
-        - name: 操作方法指南
+        - name: 操作指南
           items:
             - name: 图形数据建模
               href: graph-modeling.md
@@ -830,7 +834,7 @@
             - name: 'F#'
               href: /dotnet/articles/fsharp/using-fsharp-on-azure/table-storage
               maintainContext: true
-        - name: 操作方法指南
+        - name: 操作指南
           items:
             - name: 使用表 API 构建应用
               href: table-support.md
@@ -863,11 +867,11 @@
           items:
             - name: 什么是 Cosmos DB 中的 Etcd API？
               href: etcd-api-introduction.md
-        - name: 操作方法指南
+        - name: 操作指南
           items:
             - name: 将 Azure Kubernetes 与 Azure Cosmos DB 配合使用
               href: bootstrap-kubernetes-cluster.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 使用 Azure Cosmos 帐户
       href: how-to-manage-database-account.md
@@ -951,7 +955,7 @@
               href: performance-testing.md
         - name: 以经济高效的方式读取和写入
           href: key-value-store-cost.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 查询性能故障排除
           href: troubleshoot-query-performance.md
@@ -1008,10 +1012,13 @@
           href: ../private-link/create-private-endpoint-cosmosdb-portal.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: 配置跨源资源共享 (CORS)
           href: how-to-configure-cross-origin-resource-sharing.md
-        - name: 使用 Key Vault 保护 Azure Cosmos 密钥
-          href: access-secrets-from-keyvault.md
+        - name: 使用托管标识保护密钥
+          href: managed-identity-based-authentication.md
+          displayName: 'msi, managed service identity, aad, azure active directory, identity'
         - name: 使用 Azure AD 进行基于证书的身份验证
           href: certificate-based-authentication.md
+        - name: 使用 Key Vault 保护密钥
+          href: access-secrets-from-keyvault.md
         - name: 将用户访问权限仅限于数据操作
           href: how-to-restrict-user-data.md
         - name: 配置客户管理的密钥
@@ -1026,6 +1033,8 @@
           href: monitor-cosmos-db.md
         - name: 使用诊断日志进行监视
           href: cosmosdb-monitor-resource-logs.md
+        - name: 审核控制平面日志
+          href: audit-control-plane-logs.md
         - name: 用于 Cosmos 的 Azure Monitor（预览版）
           href: ../azure-monitor/insights/cosmosdb-insights-overview.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: 从 Cosmos DB 帐户中查看指标
@@ -1102,6 +1111,8 @@
           href: bulk-executor-overview.md
         - name: 批量执行程序 - .NET 库
           href: bulk-executor-dot-net.md
+        - name: 从批量执行程序迁移到 .NET SDK
+          href: how-to-migrate-from-bulk-executor-library.md
         - name: 批量执行程序 - Java 库
           href: bulk-executor-java.md
 - name: 参考
