--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: spelluru
   ms.author: spelluru
-  ms.date: 01/29/2020
-  ms.openlocfilehash: 957a942efd618003dd3ff3f9f76be72799770859
-  ms.sourcegitcommit: c2065e6f0ee0919d36554116432241760de43ec8
+  ms.date: 03/13/2020
+  ms.openlocfilehash: 24f3c35b41effaaad7aa3058c4a3d3af13739a01
+  ms.sourcegitcommit: b0ff9c9d760a0426fd1226b909ab943e13ade330
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/26/2020
-  ms.locfileid: "80288285"
+  ms.lasthandoff: 04/01/2020
+  ms.locfileid: "80520321"
 landingContent:
 - title: 关于事件中心
   linkLists:
@@ -69,8 +69,6 @@ landingContent:
       url: event-hubs-kafka-stream-analytics.md
   - linkListType: how-to-guide
     links:
-    - text: 创建启用了 Apache Kafka 的事件中心
-      url: event-hubs-create.md
     - text: 在事件中心镜像 Kafka 代理
       url: event-hubs-kafka-mirror-maker-tutorial.md
     - text: 将 Apache Spark 连接到事件中心
@@ -99,12 +97,34 @@ landingContent:
       url: event-hubs-storm-getstarted-receive.md
     - text: Go
       url: event-hubs-go-get-started-send.md
+- title: “Azure Stack Hub 上的事件中心”预览版
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 概述
+      url: /azure-stack/user/event-hubs-overview
+    - text: 常用功能集
+      url: /azure-stack/user/event-hubs-overview#features
+  - linkListType: how-to-guide
+    links:
+    - text: 容量计划
+      url: /azure-stack/operator/event-hubs-rp-capacity-planning
+    - text: 安装的先决条件（操作员）
+      url: /azure-stack/operator/event-hubs-rp-prerequisites
+    - text: 安装（操作员）
+      url: /azure-stack/operator/event-hubs-rp-install
+    - text: 使用 Blob 存储作为检查点存储
+      url: use-blob-storage-checkpoint-store-azure-stack-hub.md
+  - linkListType: quickstart
+    links:
+    - text: 创建事件中心群集
+      url: /azure-stack/user/event-hubs-quickstart-cluster-portal
 - title: 捕获事件
   linkLists:
   - linkListType: overview
     links:
     - text: 将事件捕获到 Azure Blob 存储或 Azure Data Lake Storage 中
-      url: event-hubs-dedicated-overview.md
+      url: event-hubs-capture-overview.md
   - linkListType: quickstart
     links:
     - text: 使用 Azure 门户启用事件捕获
