--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -39,7 +39,9 @@
       href: logic-apps-enterprise-integration-overview.md
     - name: 访问 Azure 虚拟网络
       href: connect-virtual-network-vnet-isolated-environment-overview.md
-- name: 操作方法指南
+    - name: 业务连续性和灾难恢复
+      href: business-continuity-disaster-recovery-guidance.md
+- name: 操作指南
   items:
     - name: 开发
       items:
@@ -193,7 +195,7 @@
           href: logic-apps-http-endpoint.md
         - name: Azure 服务总线
           href: ../connectors/connectors-create-api-servicebus.md
-        - name: Azure SQL 数据库
+        - name: Azure SQL Database
           href: ../connectors/connectors-create-api-sqlazure.md
         - name: 必应搜索
           href: ../connectors/connectors-create-api-bingsearch.md
