--- a/articles/sql-database/sql-database-single-index.yml
+++ b/articles/sql-database/sql-database-single-index.yml
@@ -1,129 +1,87 @@
-### YamlMime:YamlDocument
-documentType: LandingData
-title: Azure SQL 数据库
+### YamlMime:Landing
+title: 查找有关 Azure SQL 单一数据库、数据库服务器和弹性池的文档
+summary: 查找 Azure SQL 数据库单一数据库、弹性池和数据库服务器的概念、快速入门、教程和示例。
 metadata:
-  title: 文档 - 单一数据库、数据库服务器、弹性池
-  description: 查找适用于 Azure SQL 数据库单一数据库、弹性池和数据库服务器的快速入门、教程和示例。
+  title: 文档
+  description: 查找有关 Azure SQL 数据库（基于最新稳定版 Microsoft SQL Server 的关系数据库即服务 (DBaaS)）的文档。
   services: sql-database
-  requires-business-manager-approval: false
   ms.service: sql-database
   ms.subservice: single-database
-  ms.topic: overview
-  author: jovanpop-msft
-  ms.author: jovanpop
+  ms.topic: landing-page
+  author: stevestein
+  ms.author: sstein
   ms.reviewer: carlrab
-  manager: craigg
-  ms.date: 04/26/2019
-abstract:
-  description: Azure SQL 数据库是基于最新稳定版 Microsoft SQL Server 数据库引擎的关系数据库即服务 (DBaaS)。 SQL 数据库是一种高性能、易于使用、可靠且安全的数据库，可以用来以所选编程语言构建新的应用程序、网站和微服务，且无需管理基础结构。 使用我们的快速入门、教程和示例了解如何使用 SQL 数据库。
-  aside:
-    image:
-      alt: null
-      height: 110
-      src: 'https://docs.microsoft.com/azure/sql-database/media/index/create-sql-database-on-azure.png'
-      width: 250
-    title: '在 Azure 上创建单一 SQL 数据库 (3:12)'
-    href: 'https://azure.microsoft.com/resources/videos/create-sql-database-on-azure/'
-    width: 250
-sections:
-  - items:
-      - type: list
-        style: cards
-        className: cardsM
-        columns: 3
-        items:
-          - title: 弹性池
-            href: /azure/sql-database/sql-database-elastic-pool
-            html: <p>SQL 数据库弹性池是一种简单且经济高效的解决方案，用于管理和缩放具有不断变化且不可预测的使用需求的多个数据库。</p>
-            image:
-              src: media/index/i_elasticpool.svg
-          - title: SQL 数据库服务器
-            href: /azure/sql-database/sql-database-servers
-            html: <p>SQL 数据库服务器是集中管理点，可用于在服务器中的一组单一数据库或共用数据库上配置安全性、优化、备份策略和其他配置属性。</p>
-            image:
-              src: media/index/i_mi.svg
-          - title: 价格和服务层级
-            href: /azure/sql-database/sql-database-service-tiers
-            html: <p>通过灵活的服务层级（跨度从经济实惠的 $5/月的数据库到功能强大的 80 核数据库）定制符合你的需求的价格/性能比。</p>
-            image:
-              src: media/index/i_perftier.svg
-          - title: 可伸缩性
-            href: /azure/sql-database/sql-database-scale-resources
-            html: <p>轻松扩展数据库以提高应用程序的性能。</p>
-            image:
-              src: media/index/i_scale.svg
-          - title: 平台即服务
-            href: /azure/sql-database/sql-database-paas
-            html: <p>内置的高可用性、自动备份和异地复制将协助防止维护操作、基础结构故障或硬件故障停止你的业务。</p>
-            image:
-              src: media/index/gear.svg
-          - title: 高级安全
-            href: /azure/sql-database/sql-database-security-index
-            html: <p>使用 Azure AD 身份验证、虚拟网络、防火墙、Always Encrypted 连接协助保护数据库。 通过内置的安全功能识别威胁和漏洞。</p>
-            image:
-              src: media/index/i_security.svg
-  - title: 五分钟快速入门
-    items:
-      - type: paragraph
-        text: 可以通过 Azure 门户、Azure CLI 和 Azure PowerShell 使用 Azure SQL 数据库执行基本的管理任务。 了解如何使用以下快速入门示例执行基本的管理任务：
-      - type: table
-        style: dataMatrix
-        columns:
-          - image:
-              src: media/index/portal.svg
-            title: Azure 门户
-          - image:
-              src: media/index/cli.svg
-            title: Azure CLI
-          - image:
-              src: media/index/logo_powershell.svg
-            title: PowerShell
-          - image:
-              src: media/index/logo_arm.svg
-            title: Azure 资源管理器模板
-        rows:
-          - title: 创建数据库
-            values:
-              - href: /azure/sql-database/sql-database-single-database-get-started
-              - href: /azure/sql-database/scripts/sql-database-create-and-configure-database-cli
-              - href: /azure/sql-database/scripts/sql-database-create-and-configure-database-powershell
-              - href: 'https://github.com/Azure/azure-quickstart-templates/tree/master/201-sql-database-transparent-encryption-create'
-          - title: 创建弹性池
-            values:
-              - href: /azure/sql-database/sql-database-elastic-pool-manage
-              - href: /azure/sql-database/scripts/sql-database-move-database-between-pools-cli
-              - href: /azure/sql-database/scripts/sql-database-move-database-between-pools-powershell
-              - href: 'https://github.com/Azure/azure-quickstart-templates/tree/master/101-sql-elastic-pool-create'
-          - title: 缩放数据库
-            values:
-              - href: null
-              - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-database-cli
-              - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-database-powershell
-              - href: null
-          - title: 缩放弹性池
-            values:
-              - href: null
-              - href: /azure/sql-database/scripts/sql-database-scale-pool-cli
-              - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-pool-powershell
-  - title: 分步教程
-    items:
-      - type: paragraph
-        text: 了解如何使用 Azure SQL 数据库创建、管理和迁移数据库。
-      - type: list
-        style: ordered
-        items:
-          - html: 使用 <a href="/azure/sql-database/sql-database-design-first-database">SSMS</a> 或 <a href="/azure/sql-database/sql-database-design-first-database-csharp">.NET</a> 创建和设计新 SQL 数据库的架构。
-          - html: 使用<a href="/azure/sql-database/sql-database-migrate-your-sql-server-database">数据库迁移助手</a>或 <a href="/azure/sql-database/sql-database-import">BACPAC 导入</a>将现有数据库迁移到 Azure。
-          - html: <a href="/azure/sql-database/sql-database-security-tutorial">保护 SQL 数据库</a>。
-          - html: 使用<a href="/azure/sql-database/sql-database-implement-geo-distributed-database">地理分散的数据库</a>在全球分布数据。
-          - html: 查找可以帮助你配置数据库的更多<a href="sql-database-howto-single-database.md">操作指南</a>。
-  - title: 示例
-    items:
-      - type: paragraph
-        text: 查找脚本来管理常见任务。
-      - type: list
-        style: unordered
-        className: spaced noBullet
-        items:
-          - html: <a href="/azure/sql-database/sql-database-powershell-samples">Azure PowerShell</a>
-          - html: <a href="/azure/sql-database/sql-database-cli-samples">Azure CLI</a>
+  ms.date: 03/30/2020
+  ms.openlocfilehash: 1aa091dadce4f45db93e97640f5705524d72879e
+  ms.sourcegitcommit: 7581df526837b1484de136cf6ae1560c21bf7e73
+  ms.translationtype: HT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 03/31/2020
+  ms.locfileid: "80421240"
+landingContent:
+- title: 单一数据库
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 什么是 SQL 数据库？
+      url: sql-database-technical-overview.md
+    - text: 我应该选择哪个 SQL 数据库选项？
+      url: sql-database-paas-vs-sql-server-iaas.md
+    - text: 购买选项
+      url: sql-database-purchase-models.md
+    - text: 服务层
+      url: sql-database-service-tiers-general-purpose-business-critical.md
+- title: 弹性池
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 弹性池
+      url: sql-database-elastic-pool.md
+    - text: 管理弹性池
+      url: sql-database-elastic-pool-manage.md
+    - text: 扩展弹性池
+      url: sql-database-elastic-pool-scale.md
+- title: SQL 数据库服务器
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: SQL 数据库服务器
+      url: sql-database-servers.md
+    - text: 连接设置
+      url: sql-database-connectivity-settings.md
+    - text: 防火墙规则
+      url: sql-database-server-level-firewall-rule.md
+- title: 高级安全
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 安全功能
+      url: sql-database-security-overview.md
+    - text: 安全最佳做法
+      url: sql-database-security-best-practice.md
+    - text: 登录名、用户帐户、角色和权限
+      url: sql-database-manage-logins.md
+    - text: Azure Active Directory
+      url: sql-database-aad-authentication.md
+- title: 可伸缩性
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 动态纵向扩展或缩减
+      url: sql-database-scale-resources.md
+    - text: 读取横向扩展
+      url: sql-database-read-scale-out.md
+    - text: 跨数据库作业
+      url: sql-database-elastic-jobs-overview.md
+- title: 价格和服务层级
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 购买模型
+      url: sql-database-purchase-models.md
+    - text: 服务层
+      url: sql-database-service-tiers-general-purpose-business-critical.md
+    - text: 无服务器
+      url: sql-database-serverless.md
+    - text: 超大规模
+      url: sql-database-service-tier-hyperscale.md
