--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -13,7 +13,7 @@
           href: storage-blobs-introduction.md
     - name: 快速入门
       items:
-        - name: 在不使用代码的情况下管理 Blob
+        - name: 使用 Blob
           items:
             - name: Azure 门户
               href: storage-quickstart-blobs-portal.md
@@ -23,8 +23,6 @@
               href: storage-quickstart-blobs-powershell.md
             - name: CLI
               href: storage-quickstart-blobs-cli.md
-        - name: 使用 Blob 进行开发
-          items:
             - name: .NET
               items:
                 - name: .NET (v12 SDK)
@@ -430,7 +428,7 @@
               href: storage-xamarin-blob-storage.md
         - name: 跨区域移动
           href: ../common/storage-account-move.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 故障排除
+        - name: 疑难解答
           items:
             - name: 延迟问题
               href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
